--- a/src/main/webapp/nexa_a/_resource_/_theme_/default/theme_chrome.css
+++ b/src/main/webapp/nexa_a/_resource_/_theme_/default/theme_chrome.css
@@ -756,8 +756,7 @@ textarea::-webkit-scrollbar { display: none; }
 .Tab .tabbuttonitemTab
 {
 	color : #333333;
-	background : #fcfcfc;
-	background : linear-gradient(to top, #fcfcfc, #fafafa);
+	background : #657ec2;
 	border : 1px solid #c7c7c7;
 }
 .DatePickerControl
@@ -1247,8 +1246,7 @@ textarea::-webkit-scrollbar { display: none; }
 #nexacontainer .Tab .tabbuttonitemTab[status=mouseover]
 {
 	border : 1px solid #b1b1b1;
-	background : #dddcdc;
-	background : linear-gradient(to top, #dddcdc, #fefefe);
+	background : #657ec2;
 }
 #nexacontainer .Tab .tabbuttonitemTab[status=focused]
 {
@@ -1604,7 +1602,7 @@ textarea::-webkit-scrollbar { display: none; }
 #nexacontainer .Tab .tabbuttonitemTab[userstatus=selected]
 {
 	color : #dee4ef;
-	background : #1055a1;
+	background : #657ec2;
 	border : 1px solid #1055a1;
 }
 #nexacontainer .DatePickerControl .body .weekitem[userstatus=saturday]
@@ -1910,7 +1908,7 @@ textarea::-webkit-scrollbar { display: none; }
 #nexacontainer .Tab .tabbuttonitemTab[status=disabled]
 {
 	color : #ababab;
-	background : #e7e7e7;
+	background : #657ec2;
 }
 #nexacontainer .Tab .tabbuttonitemTab .tabbuttonitemtext[status=disabled]
 {
@@ -2022,13 +2020,13 @@ textarea::-webkit-scrollbar { display: none; }
 #nexacontainer .Tab .tabbuttonitemTab[status=focused][userstatus=selected]
 {
 	color : #dee4ef;
-	background : #1055a1;
+	background : #657ec2;
 	border : 1px solid #1055a1;
 }
 #nexacontainer .Tab .tabbuttonitemTab[status=disabled][userstatus=selected]
 {
 	border : 1px solid #c7d4e2;
-	background : #94a9bf;
+	background : #657ec2;
 }
 #nexacontainer .DatePickerControl .body .dayitem[status=mouseover][userstatus=saturday]
 {
