--- a/src/main/webapp/nexa_a/_resource_/_theme_/default/theme_runtime.css
+++ b/src/main/webapp/nexa_a/_resource_/_theme_/default/theme_runtime.css
@@ -498,7 +498,7 @@
 .Tab .tabbuttonitemTab
 {
 	color : #333333;
-	background : linear-gradient(to top, #fcfcfc, #fafafa);
+	background : #657ec2;
 	border : 1px solid #c7c7c7;
 }
 .DatePickerControl
@@ -954,7 +954,7 @@
 .Tab .tabbuttonitemTab[status=mouseover]
 {
 	border : 1px solid #b1b1b1;
-	background : linear-gradient(to top, #dddcdc, #fefefe);
+	background : #657ec2;
 }
 .Tab .tabbuttonitemTab[status=focused]
 {
@@ -1272,7 +1272,7 @@
 .Tab .tabbuttonitemTab[userstatus=selected]
 {
 	color : #dee4ef;
-	background : #1055a1;
+	background : #657ec2;
 	border : 1px solid #1055a1;
 }
 .DatePickerControl .body .weekitem[userstatus=saturday]
@@ -1577,7 +1577,7 @@
 .Tab .tabbuttonitemTab[status=disabled]
 {
 	color : #ababab;
-	background : #e7e7e7;
+	background : #657ec2;
 }
 .Tab .tabbuttonitemTab .tabbuttonitemtext[status=disabled]
 {
@@ -1689,13 +1689,13 @@
 .Tab .tabbuttonitemTab[status=focused][userstatus=selected]
 {
 	color : #dee4ef;
-	background : #1055a1;
+	background : #657ec2;
 	border : 1px solid #1055a1;
 }
 .Tab .tabbuttonitemTab[status=disabled][userstatus=selected]
 {
 	border : 1px solid #c7d4e2;
-	background : #94a9bf;
+	background : #657ec2;
 }
 .DatePickerControl .body .dayitem[status=mouseover][userstatus=saturday]
 {
