--- a/src/main/webapp/nexa_a/_resource_/_theme_/default/theme_safari.css
+++ b/src/main/webapp/nexa_a/_resource_/_theme_/default/theme_safari.css
@@ -748,9 +748,7 @@ textarea::-webkit-scrollbar { display: none; }
 .Tab .tabbuttonitemTab
 {
 	color : #333333;
-	background : #fcfcfc;
-	background : -webkit-linear-gradient(to top, #fcfcfc, #fafafa);
-	background : linear-gradient(to top, #fcfcfc, #fafafa);
+	background : #657ec2;
 	border : 1px solid #c7c7c7;
 }
 .DatePickerControl
@@ -1252,9 +1250,7 @@ textarea::-webkit-scrollbar { display: none; }
 #nexacontainer .Tab .tabbuttonitemTab[status=mouseover]
 {
 	border : 1px solid #b1b1b1;
-	background : #dddcdc;
-	background : -webkit-linear-gradient(to top, #dddcdc, #fefefe);
-	background : linear-gradient(to top, #dddcdc, #fefefe);
+	background : #657ec2;
 }
 #nexacontainer .Tab .tabbuttonitemTab[status=focused]
 {
@@ -1621,7 +1617,7 @@ textarea::-webkit-scrollbar { display: none; }
 #nexacontainer .Tab .tabbuttonitemTab[userstatus=selected]
 {
 	color : #dee4ef;
-	background : #1055a1;
+	background : #657ec2;
 	border : 1px solid #1055a1;
 }
 #nexacontainer .DatePickerControl .body .weekitem[userstatus=saturday]
@@ -1928,7 +1924,7 @@ textarea::-webkit-scrollbar { display: none; }
 #nexacontainer .Tab .tabbuttonitemTab[status=disabled]
 {
 	color : #ababab;
-	background : #e7e7e7;
+	background : #657ec2;
 }
 #nexacontainer .Tab .tabbuttonitemTab .tabbuttonitemtext[status=disabled]
 {
@@ -2040,13 +2036,13 @@ textarea::-webkit-scrollbar { display: none; }
 #nexacontainer .Tab .tabbuttonitemTab[status=focused][userstatus=selected]
 {
 	color : #dee4ef;
-	background : #1055a1;
+	background : #657ec2;
 	border : 1px solid #1055a1;
 }
 #nexacontainer .Tab .tabbuttonitemTab[status=disabled][userstatus=selected]
 {
 	border : 1px solid #c7d4e2;
-	background : #94a9bf;
+	background : #657ec2;
 }
 #nexacontainer .DatePickerControl .body .dayitem[status=mouseover][userstatus=saturday]
 {
